--- a/assets/css/modal.css
+++ b/assets/css/modal.css
@@ -34,7 +34,7 @@
 .modal-window {
   --animate-duration: 100ms;
   background-color: #fff;
-  border: 4px solid #458145;
+  border: 4px solid #529952;
   border-top-width: 0;
   box-shadow: 0 0 0 4px rgb(0 0 0 / 15%), 0 0 16px rgb(0 0 0 / 25%);
   display: flex;
@@ -56,7 +56,7 @@
   display: flex;
   font-weight: 500;
   justify-content: center;
-  padding: 4px 16px;
+  padding: 0 10px;
   width: 100%;
 }
   .modal-title.debug {
